# yugioh-browser

./: .env.example  .gitignore  APRESENTACAO_FUNCIONALIDADES_YGO_SUBITA.md  COMO_O_SISTEMA_FUNCIONA.md  DASHBOARD_KPI_ROADMAP.md  FM_FUSOES_COMPLETAS.md  README.md  alembic.ini  docker-compose.yml  duel_fx_pack.md  duel_fx_pack_sprint1.md  fm_cards.txt  fm_cards_missing_images.txt  jogo.md  lobby_frameA_implementation.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  tsconfig.base.json
.github/workflows/: cd.yml  ci.yml
apps/server/: .env.example  docker-compose.yml  package.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: manifest.json  sw.js
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml
docs/: DEPLOY_MULTIPLAYER.md  setup.md
docs/api/: guide.md
docs/architecture/: overview.md
docs/etl/: guide.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css
frontend/src/pages/: DashboardDetailPage.js  DashboardDetailPage.tsx  DashboardListPage.js  DashboardListPage.tsx  DataSourcesPage.js  DataSourcesPage.tsx  LoginPage.js  LoginPage.tsx
frontend/src/services/: api.js  api.ts
frontend/src/store/: useDashboardStore.js  (+1 more)
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: create_sample_data.py  generate-fm-catalog.mjs  generate-fm-fusions.mjs  generate-fm-npc-source.mjs  run_etl.sh  seed_db.py  setup.sh
src/infrastructure/: etl_runner.py
src/shared/: __init__.py  config.py  constants.py  types.py  utils.py
tests/: conftest.py
tests/data/: e2e.csv
(+285 files in other folders)
