[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpi-dashboard"
version = "1.0.0"
description = "Business Intelligence platform for KPI dashboards and ETL pipelines"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "KPI Dashboard Team" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=43.0.0",
  "redis>=5.0.7",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "polars>=1.4.1",
  "pyarrow>=17.0.0",
  "duckdb>=1.0.0",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "requests>=2.32.3",
  "gspread>=6.1.2",
  "structlog>=24.4.0",
  "prometheus-client>=0.20.0",
  "reportlab>=4.2.2",
  "openpyxl>=3.1.5",
  "xlsxwriter>=3.2.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "faker>=27.0.0",
  "factory-boy>=3.3.0",
  "great-expectations>=1.1.3",
  "black>=24.8.0",
  "isort>=5.13.2",
  "flake8>=7.1.1",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
